--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header [class.scrolled]="headerScrolled()">
   <nav class="container">
-    <a href="#hero" class="logo" (click)="closeMobileMenu()"><img src="img/Logo.png" alt="" style="width: auto; height: 40px;"></a>
+    <a href="#title" class="logo" (click)="closeMobileMenu()"><img src="img/Logo.png" alt="" style="width: auto; height: 60px;"></a>
     <div class="menu-icon" (click)="toggleMobileMenu()">
       <svg *ngIf="!mobileMenuOpen()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -11,13 +11,23 @@
     </div>
     <ul class="nav-links" [class.active]="mobileMenuOpen()">
       <li *ngFor="let link of navLinks">
-        <a [routerLink]="link.path" (click)="closeMobileMenu()">{{ link.label }}</a>
+        <a [routerLink]="link.path" (click)="handleNavClick(link)">{{ link.label }}</a>
       </li>
+
+      <!-- Mostrar logout se estiver logado -->
+      <li *ngIf="isLoggedIn()">
+        <button class="logout-button" (click)="logout()">
+          <span class="button-text">Sair</span>
+          <span class="button-icon">🚪</span>
+        </button>
+      </li>
+
+      <!-- Botão principal -->
       <li>
-        <a [routerLink]="['/login']" class="contact-button" (click)="closeMobileMenu()">
-          <span class="button-text">Diga Olá</span>
-          <span class="button-icon">👋</span>
-        </a>
+        <button class="contact-button" (click)="handleContactButton()">
+          <span class="button-text">{{ buttonText() }}</span>
+          <span class="button-icon">{{ isLoggedIn() ? '👤' : '👋' }}</span>
+        </button>
       </li>
     </ul>
   </nav>
