--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -2,6 +2,6 @@
   <canvas class="particle-canvas" #particleCanvas></canvas>
   <div class="title-content" #heroTitle>
     <h1 #heroName>Eduardo Barreto</h1>
-    <h2 #heroSubtitle>Desenvolvedor Front-End | Especialista Angular | UI/UX Enthusiast</h2>
+    <h2 #heroSubtitle>Desenvolvedor Full-Stack | Especialista Angular e React | UI/UX Enthusiast</h2>
   </div>
 </div>
