--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
       <li>
         <button class="contact-button" (click)="handleContactButton()">
           <span class="button-text">{{ buttonText() }}</span>
-          <span class="button-icon">{{ isLoggedIn() ? '👤' : '👋' }}</span>
+          <span class="button-icon">{{ isLoggedIn() ? '👤' : '' }}</span>
         </button>
       </li>
     </ul>
