--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<main class="main-content" [class.home-page]="isHomePage">
+<main class="main-content">
   <router-outlet></router-outlet>
 </main>
